[gd_scene load_steps=6 format=3 uid="uid://bk01g52ncjqmk"]

[ext_resource type="Script" path="res://Panda_NPC.gd" id="1_ltbuy"]
[ext_resource type="Texture2D" uid="uid://bm0e1ngur5gy3" path="res://Assets/Sprite/Panda/SPRITE REGULAR PANDA NEUTRAL.png" id="2_8mqnj"]
[ext_resource type="Texture2D" uid="uid://bcldilaubklny" path="res://Assets/Sprite/Panda/Encadré texte bambou panda blanco.png" id="3_ndr66"]

[sub_resource type="SpriteFrames" id="SpriteFrames_verxv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8mqnj")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bcdq5"]
size = Vector2(897.5, 427.5)

[node name="GROSPANDA" type="CharacterBody2D"]
scale = Vector2(0.4, 0.4)
script = ExtResource("1_ltbuy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_verxv")
animation = &"Idle"
autoplay = "Idle"

[node name="Chat_Detection_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chat_Detection_Area"]
position = Vector2(-1.25001, 36.25)
shape = SubResource("RectangleShape2D_bcdq5")

[node name="DialogBox" type="Node2D" parent="."]
visible = false

[node name="EncadréTexteBambouPandaBlanco" type="Sprite2D" parent="DialogBox"]
position = Vector2(1032.5, -620)
scale = Vector2(1.96667, 2.0125)
texture = ExtResource("3_ndr66")

[node name="Text" type="RichTextLabel" parent="DialogBox"]
offset_left = 75.0
offset_top = -775.0
offset_right = 2037.0
offset_bottom = -440.0
theme_override_font_sizes/normal_font_size = 75
bbcode_enabled = true
text = "[color=black]This text is white[/color]"

[node name="Label" type="Label" parent="."]
z_index = 3
offset_left = -230.0
offset_top = 272.5
offset_right = 233.0
offset_bottom = 360.5
theme_override_font_sizes/font_size = 60
text = "Appuyez sur E pour parler"

[connection signal="body_entered" from="Chat_Detection_Area" to="." method="_on_chat_detection_area_body_entered"]
[connection signal="body_exited" from="Chat_Detection_Area" to="." method="_on_chat_detection_area_body_exited"]
